2017-07-06  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-2

	* R/functions.R (timegrid): fix timezone
	handling

2017-06-26  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): 0.2-1

	* R/functions.R (timegrid): fix handling of
	'excludeWeekends' (which had been ignored) and
	handling of timezone

	* inst/unitTests/ut_datetime.R (test.timegrid):
	add tests

	* man/*: several minor updates

2017-06-22  Enrico Schumann  <es@enricoschumann.net>

	* R/functions.R (rfc822t): use 'month.abb'

2017-06-19  Enrico Schumann  <es@enricoschumann.net>

	* README.md: add file

	* man/*: update docs

2017-06-14  Enrico Schumann  <es@enricoschumann.net>

	* inst/unitTests/ut_datetime.R: fix unit tests,
	as many were broken because of the renaming of
	functions for version 0.2-0

2017-05-08  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Version): Version: 0.2-0

	* R/functions.R: *BACKWARD* *INCOMPATIBLE* *CHANGES*:
	rename functions:

	convertDate   => convert_date
        convertTZ     => convert_tz
        dayOfMonth<-  => day_of_month<-
        dayOfMonth    => day_of_month
        endOfMonth    => end_of_month
        endOfPreviousMonth => end_of_previous_month
        endOfYear     => end_of_year
        firstOfMonth  => first_of_month
        firstOfYear   => first_of_year
        isBusinessDay => is_businessday
        isLeapyear    => is_leapyear
        isWeekend     => is_weekend
        lastWeekday   => last_weekday
        nextBDay      => next_bday
        nextBusinessDay => next_businessday
        nthWeekday    => nth_weekday
        prevBDay      => prev_bday
        previousBusinessDay => previous_businessday

2017-01-26  Enrico Schumann  <es@enricoschumann.net>

	* DESCRIPTION (Description): expand package
	description

2016-10-08  Enrico Schumann  <es@enricoschumann.net>

	* man/ update documentation; create separate
	help pages for various functions

2016-10-05  Enrico Schumann  <es@enricoschumann.net>
