@@ -1,3 +1,8 @@
+2017-07-07  Enrico Schumann  <es@enricoschumann.net>
+
+	* R/functions.R (guess_time): add function (not
+	exported yet)
+
 2017-07-06  Enrico Schumann  <es@enricoschumann.net>
 
 	* DESCRIPTION (Version): 0.2-2
